# pi-firestick

./: README.md  capture.py  code_to_key.json  codes  config.ini  keycodes.json  load_to_py.sh  main.py  pifirestick.service  pyproject.toml  remote_codes  requirements.txt  send.py
pi-firestick/gpio/: mock_gpio.py
pifirestick/: __main__.py  bluetooth.py  config.py
pifirestick/bluetooth/: __init__.py  bluetooth.py
pifirestick/gpio/: __init__.py  mock_gpio.py
pifirestick/ir/: __init__.py  common.py  ir_remote.py  play.py  read.py
pifirestick/lcd/: __init__.py
pifirestick/remote/: arcade_stick.py  gamepad.py  remote.py
pifirestick/rotary_encoder/: rotary.py
