[tool.poetry]
name = "pi-firestick"
version = "0.1.0"
description = ""
authors = ["Nathan Norton <nthnnrtn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pigpio = "^1.78"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
